--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,14 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Pyramit5
 endorsed.classpath=
 excludes=
-file.reference.javafx-swt.jar=C:\\Users\\Fikaew\\Downloads\\openjfx-16_windows-x64_bin-sdk\\javafx-sdk-16\\lib\\javafx-swt.jar
-file.reference.javafx.base.jar=C:\\Users\\Fikaew\\Downloads\\openjfx-16_windows-x64_bin-sdk\\javafx-sdk-16\\lib\\javafx.base.jar
-file.reference.javafx.controls.jar=C:\\Users\\Fikaew\\Downloads\\openjfx-16_windows-x64_bin-sdk\\javafx-sdk-16\\lib\\javafx.controls.jar
-file.reference.javafx.fxml.jar=C:\\Users\\Fikaew\\Downloads\\openjfx-16_windows-x64_bin-sdk\\javafx-sdk-16\\lib\\javafx.fxml.jar
-file.reference.javafx.graphics.jar=C:\\Users\\Fikaew\\Downloads\\openjfx-16_windows-x64_bin-sdk\\javafx-sdk-16\\lib\\javafx.graphics.jar
-file.reference.javafx.media.jar=C:\\Users\\Fikaew\\Downloads\\openjfx-16_windows-x64_bin-sdk\\javafx-sdk-16\\lib\\javafx.media.jar
-file.reference.javafx.swing.jar=C:\\Users\\Fikaew\\Downloads\\openjfx-16_windows-x64_bin-sdk\\javafx-sdk-16\\lib\\javafx.swing.jar
-file.reference.javafx.web.jar=C:\\Users\\Fikaew\\Downloads\\openjfx-16_windows-x64_bin-sdk\\javafx-sdk-16\\lib\\javafx.web.jar
+file.reference.javafx-swt.jar=C:\\javafx-sdk-16\\lib\\javafx-swt.jar
+file.reference.javafx.base.jar=C:\\javafx-sdk-16\\lib\\javafx.base.jar
+file.reference.javafx.controls.jar=C:\\javafx-sdk-16\\lib\\javafx.controls.jar
+file.reference.javafx.fxml.jar=C:\\javafx-sdk-16\\lib\\javafx.fxml.jar
+file.reference.javafx.graphics.jar=C:\\javafx-sdk-16\\lib\\javafx.graphics.jar
+file.reference.javafx.media.jar=C:\\javafx-sdk-16\\lib\\javafx.media.jar
+file.reference.javafx.swing.jar=C:\\javafx-sdk-16\\lib\\javafx.swing.jar
+file.reference.javafx.web.jar=C:\\javafx-sdk-16\\lib\\javafx.web.jar
 includes=**
 jar.compress=false
 javac.classpath=\
